dag-dsl/tests/compile_fail/scope_feed_state_mismatched_payload.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/scope_feed_state_mismatched_payload.rs:76:33
   |
76 |         scope.feed_state(state, step.inp.label);
   |               ----------        ^^^^^^^^^^^^^^ expected `InPort<i64>`, found `InPort<String>`
   |               |
   |               arguments to this method are incorrect
   |
   = note: expected struct `InPort<i64>`
              found struct `InPort<String>`
note: method defined here
  --> src/typed.rs
   |
   |     pub fn feed_state<T>(&mut self, state: StatePort<T>, to: InPort<T>) -> &mut Self {
   |            ^^^^^^^^^^
